src/objects/SharedServicesRequest__c.object
<CustomObject>
    <fields>
        <fullName>ABARoutingNumberofAboveAccount__c</fullName>
        <label>ABA Routing Number of Above Account</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>AGISnotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AGIS notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountNameChinese__c</fullName>
        <inlineHelpText>Enter full legal entity name for the Customer/Vendor/Sub to be created in local language</inlineHelpText>
        <label>Client/Vendor Name in Local Language</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search and select the account to which this update should be made</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SharedServicesRequestsAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalComments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address1StreetPOBox__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2StreetPOBox__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2isPrimary_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address3StreetPOBox__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address4isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressIsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box for whichever address you would like to write to the Account Object.  It is required that one is selected</inlineHelpText>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdvantageEmailAddress__c</fullName>
        <inlineHelpText>Email used for sending purchase orders.</inlineHelpText>
        <label>Advantage Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AdvantageEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advantage Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AlternateNameBilling__c</fullName>
        <label>Alternate Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateName__c</fullName>
        <label>Alternate Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssigntoSharedServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Shared Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BBBEEStatus__c</fullName>
        <label>BBBEE Status</label>
        <picklist>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Compliant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBBEEType__c</fullName>
        <label>BBBEE Type</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1, QSE, EME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1, 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1, QSE/EME, 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1, QSE/EME, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1, 50%, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1, QSE/EME, 50%, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2, QSE, EME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2, 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2, QSE/EME, 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2, QSE/EME, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2, 50%, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2, QSE/EME, 50%, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3, QSE, EME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3, 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3, QSE/EME, 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3, QSE/EME, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3, 50%, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3, QSE/EME, 50%, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4, QSE, EME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4, 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4, QSE/EME, 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4, QSE/EME, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4, 50%, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4, QSE/EME, 50%, 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5, QSE, EME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5, 50%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BankContactEmailAddress__c</fullName>
        <label>Bank Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BankContactPhoneNumber__c</fullName>
        <label>Bank Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BankContact__c</fullName>
        <label>Bank Contact</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BankIBAN__c</fullName>
        <label>IBAN</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankSwift__c</fullName>
        <label>Swift / BIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankTypeofAccount__c</fullName>
        <label>Type of Account</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BankingInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banking Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAddress1isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAddress2StreetPOBox__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress2isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAddress3StreetPOBox__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress3isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAddress4StreetPOBox__c</fullName>
        <label>Address Line 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressCity__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressCountry__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillingContactEmail__c</fullName>
        <label>Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingContactFirstName__c</fullName>
        <label>Contact First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingContactLastName__c</fullName>
        <label>Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingContactPhone__c</fullName>
        <label>Contact Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingOfficeEmail__c</fullName>
        <label>Office E-mail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingOfficeFax__c</fullName>
        <label>Office Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingOfficePhone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillingStateProvinceEmirateName__c</fullName>
        <formula>BillingStateProvinceEmirate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State/Province/Emirate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStateProvinceEmirateOld__c</fullName>
        <label>State/Province/EmirateOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStateProvinceEmirate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Province/Emirate</label>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Global Business Services (State/Province/Emirate)</relationshipLabel>
        <relationshipName>GlobalBusinessServicesStateProvEmirBill</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingStreetPOBox__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biz_Registration_Cert_with_CHOP_Asia__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Business Registration Certification with CHOP (Asia)</inlineHelpText>
        <label>Biz Registration Cert with CHOP (Asia)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BranchName__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchType__c</fullName>
        <label>Branch Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATBLZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUBSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CACPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHBCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHSIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNAPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEBLZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESNCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBDSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRHIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKNCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IENCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITNCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPZGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZNCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLKNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTNCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUCBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGIBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWIFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXXXX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZANCC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessRegistrationCertificateAsia__c</fullName>
        <label>Business Registration Certificate (Asia)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientGroup__c</fullName>
        <inlineHelpText>Select the industry of the Customer</inlineHelpText>
        <label>Client Group</label>
        <picklist>
            <picklistValues>
                <fullName>Industrial/Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/Province Agencies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClientSubgroup__c</fullName>
        <label>Client Subgroup</label>
        <picklist>
            <controllingField>ClientGroup__c</controllingField>
            <picklistValues>
                <fullName>Aerospace/Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airports/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect/Engineers/Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts/Museum/Galleries/Cultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical/Fertiliser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical/Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Company - Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Company - Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data/Technology/Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Marines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Navy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Agency / Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Services (Private)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Agency / Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental/Climate Agency/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Beverages/Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry/Pulp/Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Transportation (except rail) and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Services (Private)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial/Commercial Developers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice/Prisons/Security Agency / Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Banking/Finance/Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompanyRegistrationNo__c</fullName>
        <label>Company Registration No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyRegistrationSAfrica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Registration (S. Africa)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact1EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1FirstName__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1Phone__c</fullName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2FirstName__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2Phone__c</fullName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SharedServicesRequestsContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerClassification__c</fullName>
        <inlineHelpText>Select the type of Customer</inlineHelpText>
        <label>Customer Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Design Professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Own Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Est Developers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Government</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerContact1Role__c</fullName>
        <label>Contact: Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerContact2Role__c</fullName>
        <label>Contact: Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>The full legal name of the Customer/Vendor</description>
        <inlineHelpText>Enter full legal entity name for the Customer/Vendor/Sub to be created</inlineHelpText>
        <label>Client/Vendor Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <inlineHelpText>Please enter the customer number for any changes and/or address additions to an existing customer.</inlineHelpText>
        <label>Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerStatus__c</fullName>
        <inlineHelpText>Select if this customer is an opportunity phase or ready for project setup.</inlineHelpText>
        <label>Customer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerTypeClass__c</fullName>
        <formula>IF( ISPICKVAL(ProfileClass__c ,&quot;Intercompany&quot;),&quot;Internal&quot;,&quot;External&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBNumberDUNS__c</fullName>
        <label>D&amp;B Number (DUNS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>